@@ -6,17 +6,16 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import vk.itmo.teamgray.sharded.storage.common.Empty;
+import vk.itmo.teamgray.sharded.storage.common.StatusResponse;
 import vk.itmo.teamgray.sharded.storage.common.dto.FragmentDTO;
+import vk.itmo.teamgray.sharded.storage.common.dto.MoveShardDTO;
 import vk.itmo.teamgray.sharded.storage.common.dto.StatusResponseDTO;
 import vk.itmo.teamgray.sharded.storage.common.proto.AbstractGrpcClient;
-import vk.itmo.teamgray.sharded.storage.master.client.topology.ShardNodeMapping;
-import vk.itmo.teamgray.sharded.storage.node.management.MoveShardRequest;
-import vk.itmo.teamgray.sharded.storage.node.management.MoveShardResponse;
+import vk.itmo.teamgray.sharded.storage.node.management.MoveShardsRequest;
 import vk.itmo.teamgray.sharded.storage.node.management.NodeManagementServiceGrpc;
-import vk.itmo.teamgray.sharded.storage.node.management.RearrangeShardsRequest;
-import vk.itmo.teamgray.sharded.storage.node.management.RearrangeShardsResponse;
-import vk.itmo.teamgray.sharded.storage.node.management.RollbackTopologyChangeRequest;
-import vk.itmo.teamgray.sharded.storage.node.management.RollbackTopologyChangeResponse;
+import vk.itmo.teamgray.sharded.storage.node.management.PrepareRequest;
+import vk.itmo.teamgray.sharded.storage.node.management.ProcessRequest;
 
 public class NodeManagementClient extends AbstractGrpcClient<NodeManagementServiceGrpc.NodeManagementServiceBlockingStub> {
     public NodeManagementClient(String host, int port) {
@@ -28,52 +27,51 @@ public class NodeManagementClient extends AbstractGrpcClient<NodeManagementServi
         return NodeManagementServiceGrpc::newBlockingStub;
     }
 
-    public StatusResponseDTO rearrangeShards(
-        Map<Integer, Long> relevantShardsToHash,
-        List<FragmentDTO> relevantFragments,
-        List<ShardNodeMapping> relevantNodes,
-        int fullShardCount
-    ) {
-        //TODO Instead of creating this many objects, let's populate gRPC stubs right away, but let's make population method modular, so we can easily switch from gRPC.
-        RearrangeShardsRequest request = RearrangeShardsRequest.newBuilder()
-            .putAllShardToHash(relevantShardsToHash)
-            .addAllFragments(relevantFragments.stream().map(FragmentDTO::toGrpc).toList())
-            .putAllServerByShardNumber(
-                relevantNodes.stream()
-                    .collect(
-                        Collectors.toMap(
-                            ShardNodeMapping::shardId,
-                            ShardNodeMapping::serverId
-                        )
-                    )
-            )
-            .setFullShardCount(fullShardCount)
+    public StatusResponseDTO moveShards(List<MoveShardDTO> shards) {
+        MoveShardsRequest request = MoveShardsRequest.newBuilder()
+            .addAllShards(shards.stream().map(MoveShardDTO::toGrpc).collect(Collectors.toList()))
             .build();
 
-        RearrangeShardsResponse grpcResponse = blockingStub.withDeadlineAfter(10, TimeUnit.SECONDS)
-            .rearrangeShards(request);
-
-        return new StatusResponseDTO(grpcResponse.getSuccess(), grpcResponse.getMessage());
-    }
-
-    public StatusResponseDTO moveShard(int shardId, int serverId) {
-        MoveShardRequest request = MoveShardRequest.newBuilder()
-            .setShardId(shardId)
-            .setTargetServer(serverId)
-            .build();
-
-        MoveShardResponse response = blockingStub.moveShard(request);
+        StatusResponse response = blockingStub.moveShards(request);
 
         return new StatusResponseDTO(response.getSuccess(), response.getMessage());
     }
 
-    public boolean rollbackTopologyChange() {
-        RollbackTopologyChangeRequest request = RollbackTopologyChangeRequest.newBuilder().build();
-        try {
-            RollbackTopologyChangeResponse response = blockingStub.rollbackTopologyChange(request);
-            return response.getSuccess();
-        } catch (Exception e) {
-            return false;
-        }
+    public StatusResponseDTO prepareRearrange(Map<Integer, Long> shardToHash, int fullShardCount) {
+        PrepareRequest request = PrepareRequest.newBuilder()
+            .putAllShardToHash(shardToHash)
+            .setFullShardCount(fullShardCount)
+            .build();
+
+        StatusResponse grpcResponse = blockingStub.withDeadlineAfter(10, TimeUnit.SECONDS)
+            .prepareRearrange(request);
+
+        return new StatusResponseDTO(grpcResponse.getSuccess(), grpcResponse.getMessage());
+    }
+
+    public StatusResponseDTO processRearrange(List<FragmentDTO> fragments, Map<Integer, Integer> relevantNodes) {
+        ProcessRequest request = ProcessRequest.newBuilder()
+            .addAllFragments(fragments.stream().map(FragmentDTO::toGrpc).toList())
+            .putAllServerByShardNumber(relevantNodes)
+            .build();
+
+        StatusResponse grpcResponse = blockingStub.withDeadlineAfter(10, TimeUnit.SECONDS)
+            .processRearrange(request);
+
+        return new StatusResponseDTO(grpcResponse.getSuccess(), grpcResponse.getMessage());
+    }
+
+    public StatusResponseDTO applyRearrange() {
+        StatusResponse grpcResponse = blockingStub.withDeadlineAfter(10, TimeUnit.SECONDS)
+            .applyRearrange(Empty.newBuilder().build());
+
+        return new StatusResponseDTO(grpcResponse.getSuccess(), grpcResponse.getMessage());
+    }
+
+    public StatusResponseDTO rollbackRearrange() {
+        StatusResponse grpcResponse = blockingStub.withDeadlineAfter(10, TimeUnit.SECONDS)
+            .rollbackRearrange(Empty.newBuilder().build());
+
+        return new StatusResponseDTO(grpcResponse.getSuccess(), grpcResponse.getMessage());
     }
 }
